--- a/build.gradle
+++ b/build.gradle
@@ -53,22 +53,24 @@ remotes {
     }
 }
 
-///usr/share/tomcat/webapps
+task deployWarTo(type: SshTask, dependsOn: 'war') {
 
-task deployWar(type: SshTask, dependsOn: 'war') {
     def tomcatHome = '/usr/share/tomcat/webapps'
     def warName = "naqa-ci-workshop"
+
     session(remotes.web01) {
-        println "Uploading new war"
-        put(war.archivePath.absolutePath,"${tomcatHome}/${warName}.war.new")
+        println "Uploading new war to $environment"
+        put(war.archivePath.absolutePath,"${tomcatHome}/${warName}-${environment}.war")
 
-        println "removing old war"
-        execute("rm ${tomcatHome}/${warName}.war")
-
-        println "activating new war"
-        execute("mv ${tomcatHome}/${warName}.war{.new,}")
+//        println "removing old war"
+//        execute("rm ${tomcatHome}/${warName}-${environment}.war")
+//
+//        println "activating new war"
+//        execute("mv ${tomcatHome}/${warName}-${environment}.war{.new,}")
     }
 }
+
+
 
 task wrapper(type: Wrapper) {
     gradleVersion = '1.8'
