--- a/build.gradle
+++ b/build.gradle
@@ -49,7 +49,6 @@ remotes {
         host = '10.10.10.50'
         user = 'michael'
          password = 'th0ughtw0rks'
-        //identity = file('ident.pem')
     }
 }
 
@@ -61,15 +60,12 @@ task deployWarTo(type: SshTask, dependsOn: 'war') {
     session(remotes.web01) {
         println "Uploading new war to $environment"
         put(war.archivePath.absolutePath,"${tomcatHome}/${warName}-${environment}.war")
-
-//        println "removing old war"
-//        execute("rm ${tomcatHome}/${warName}-${environment}.war")
-//
-//        println "activating new war"
-//        execute("mv ${tomcatHome}/${warName}-${environment}.war{.new,}")
     }
 }
 
+task runFunctionalTests(type: Exec) {
+  commandLine 'cucumber', 'functional-tests/features'
+}
 
 
 task wrapper(type: Wrapper) {
