--- a/build.gradle
+++ b/build.gradle
@@ -72,13 +72,15 @@ task wrapper(type: Wrapper) {
     gradleVersion = '1.8'
 }
 
-task runUnitTests(type: Test) {
-    include '**/CoursesController*'
-    testLogging {
-            // Show that tests are run in the command-line output
-            events 'failed', 'passed'
-        }
+task sampleTest(type: Test, dependsOn: testClasses) {
+    include '**/*Sample*'
 }
 
+test {
+    testLogging {
+        // Show that tests are run in the command-line output
+        events 'started', 'passed'
+    }
+}
 
 tomcatRunWar.contextPath = ''
