--- a/build.gradle
+++ b/build.gradle
@@ -44,11 +44,16 @@ dependencies {
     runtime 'org.slf4j:slf4j-log4j12:1.7.5'
 }
 
+// Global settings
+ssh {
+      knownHosts = allowAnyHosts    // Disable host key verification
+}
+
 remotes {
     web01 {
         host = '10.10.10.50'
         user = 'cibuild'
-         password = 'cibuild'
+        password = 'cibuild'
     }
 }
 
